<resources>
    <string name="app_name">Task Reminder</string>

    <string name="set_date">Set Date</string>
    <string name="set_reminder">Set Reminder</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Are you sure you want to delete this task?</string>

    <string name="title">Title :</string>
    <string name="enter_title">Enter Title</string>

    <string name="enter_description">Enter Description</string>
    <string name="description">Description :</string>

    <string name="date">Date :</string>
    <string name="time">Time :</string>

    <string name="update">Update</string>
    <string name="update_task">Update Task</string>

    <string name="add">Add</string>
    <string name="add_task">Add Task</string>

    <string name="please_enter_title">please enter title</string>
    <string name="please_enter_description">please enter description</string>
    <string name="please_pick_date">please pick date</string>
    <string name="please_pick_time">please pick time</string>

    <string name="set_the_date_first">set the date first</string>
    <string name="no_task">There are no pending tasks.\nPlease press the button \'+\' to add a new task.</string>

    <string name="task_saved_successfully">task saved successfully</string>
    <string name="task_deleted_successfully">task deleted successfully</string>
    <string name="task_updated_successfully">task updated successfully</string>
</resources>