<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/varela"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_button_negative"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_grey"
        android:fontFamily="@font/varela"
        android:gravity="center"
        android:text="@string/no"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/dialog_button_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <TextView
        android:id="@+id/dialog_button_positive"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/rectangle_teal"
        android:fontFamily="@font/varela"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_button_negative"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
